# python-project-template

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
tests/: test_pypt.py
