[tool.poetry]
name = "pypt"
version = "0.1.0"
description = ""
authors = ["slyo <sean.lyo@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
isort = "^5.5.3"
black = "^20.8b1"
pre-commit = "^2.7.1"
pytest = "^6.0.2"
blacken-docs = "^1.8.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
